--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "unplugin-icons": "^0.18.3",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.0",
+    "vite-plugin-pwa": "^0.17.5",
     "vue-tsc": "^1.8.27"
   },
   "prettier": {
