🔐 add maptiler api key

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -37,6 +37,8 @@ jobs:
         run: pnpm install
       - name: Build site
         run: pnpm run build --base "/unisport-frontend/"
+        env:
+          VITE_MAPTILER_API_KEY: ${{ secrets.MAPTILER_API_KEY }}
       - name: Archive artifact
         shell: bash
         run: |
