--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "@headlessui/vue": "^1.7.18",
     "@iconify-json/material-symbols": "^1.1.72",
     "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/dompurify": "^3.0.5",
     "@vue-leaflet/vue-leaflet": "^0.10.1",
     "@vueuse/core": "^10.7.2",
+    "dompurify": "^3.0.8",
     "fuse.js": "^7.0.0",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
     "maplibre-gl": "^4.0.0",
+    "marked": "^12.0.0",
     "pinia": "^2.1.7",
     "tailwindcss": "^3.4.1",
     "vue": "^3.3.0"
