--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "@types/dompurify": "^3.0.5",
+    "@types/lodash.groupby": "^4.6.9",
     "@vue-leaflet/vue-leaflet": "^0.10.1",
     "@vueuse/core": "^10.7.2",
+    "@vueuse/integrations": "^10.7.2",
     "dompurify": "^3.0.8",
     "fuse.js": "^7.0.0",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
+    "lodash.groupby": "^4.6.0",
     "maplibre-gl": "^4.0.0",
     "marked": "^12.0.0",
     "pinia": "^2.1.7",
